Fix installation path of the plugin file at mitch's suggestion

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,7 @@
 
 bin_PROGRAMS = deskew
 
-bindir = $(prefix)$(GIMP_LIBDIR)/plug-ins
+bindir = `pkg-config --variable=gimplibdir gimp-2.0`/plug-ins
 
 deskew_SOURCES =                                \
 	plugin-intl.h                           \
